# jsonrpc

./: Cargo.toml
.github/workflows/: main.yml
src/: common.rs  debug.rs  erigon.rs  eth.rs  lib.rs  net.rs  otterscan.rs  trace.rs
src/types/: block.rs  bytes.rs  log.rs  mod.rs  receipt.rs  trace.rs  transaction.rs
