[package]
name = "ethereum-jsonrpc"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[dependencies]
ethereum-types = "0.13"
ethnum = { git = "https://github.com/vorot93/ethnum-rs", branch = "staging", default-features = false, features = [
    "serde",
] }
jsonrpsee = { version = "0.11", features = ["full"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.78"
bytes = "1.1.0"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
